fix bio width on mobile

--- a/src/client/site/Pages/Bio/styles.less
+++ b/src/client/site/Pages/Bio/styles.less
@@ -1,7 +1,7 @@
 @import "../../../variables.less";
 
 #bio {
-  width: 95%;
+  max-width: 95%;
   text-align: left;
   display: inline-block;
   line-height: 1.5em;
